решила как получилось)